# adk-meta-harness

./: .env.example  .gitignore  PLAN.md  PLAN_REFERENCE_ADOPTION.md  PROPOSER.md  README.md  pyproject.toml
.drs/: context.md  drs.config.yaml
.github/workflows/: ci.yml  drs-pr-review.yml  publish.yml
configs/: config.yaml  skills_enabled.py  system_prompt.md  tool_search.py  vanilla.py
docker/: adk-meta-harness.Dockerfile
examples/deep-research/: README.md
examples/deep-research/initial_harness/: agent.py  config.yaml  system_prompt.md
examples/skills-enabled/: README.md
examples/skills-enabled/initial_harness/: agent.py  system_prompt.md
examples/tool-search/: README.md
examples/tool-search/initial_harness/: agent.py  config.yaml
examples/vanilla/: README.md
examples/vanilla/initial_harness/: agent.py  config.yaml
src/adk_meta_harness/: __init__.py  candidate.py  cli.py  eval_one.py  gate.py  harbor_adapter.py  judge.py  learnings.py  outer_loop.py  run_artifacts.py  splits.py  task.py  task_executor.py  validate.py  verify.py
src/adk_meta_harness/judge/: __init__.py  base.py  (+3 more)
tests/: test_atif.py  test_candidate.py  test_cli.py  test_coding_agent_cli.py  test_file_exporter.py  test_gate.py  test_harbor_adapter.py  test_harbor_reward.py  test_judge.py  test_learnings.py  test_otel_extended.py  test_otel_to_atif.py  test_outer_loop.py  test_proposer.py  test_proposer_extended.py  test_reward.py  test_run_artifacts.py  test_runner.py  test_splits.py  test_task.py  test_task_executor.py  test_temporal_runner.py  test_validate.py  test_verify.py
(+43 files in other folders)
