[project]
name = "adk-meta-harness"
version = "0.1.0"
description = "Meta-harness optimization for Google ADK agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Manojlds" }]
dependencies = [
    "google-adk>=1.0.0",
    "adk-skills-agent>=0.1.0",
    "adk-tool-search>=0.1.0",
    "harbor>=0.3.0",
    "litellm>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.scripts]
adk-meta-harness = "adk_meta_harness.cli:main"
amh = "adk_meta_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_meta_harness"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"